# xbattery_cursor

./: .cursorrules  .gitattributes  .gitignore  CMakeLists.txt  SETUP.md  xbattery-tools.json
.cursor/rules/: embedded-best-practices.mdc  misra-c.mdc
cmake/: arm-none-eabi-gcc.cmake
scripts/: check_toolchain.ps1
src/: main.c  system_S32K144.c  system_S32K344.c
startup/: S32K144_ram.ld  S32K344_ram.ld  startup_S32K144.S  startup_S32K344.S
